--- a/SelahSeries/Views/Shared/_Layout.cshtml
+++ b/SelahSeries/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿@*<!DOCTYPE html>*@
 <html>
 <head>
     <title>@ViewData["Title"] - SelahSeries</title>
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Demo project">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    @if (IsSectionDefined("AddMetaTags"))
+    {
+        @RenderSection("AddMetaTags", required: false)
+    }
     <environment include="Development">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900|Oswald:400,700">
         <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/bootstrap4/bootstrap.min.css">
@@ -21,9 +24,9 @@
             @RenderSection("AddToHead", required: false)
         }
 
-         <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/aos.css">
+        <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/aos.css">
         <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/style.css">
-        
+
 
     </environment>
     <environment exclude="Development">
@@ -43,134 +46,133 @@
         @if (ViewData["Add Navigation"] != "false")
         {
             <header class="header">
-                   
-
-                        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                            <a class="navbar-brand" href="#">SELAH</a>
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                              <ul class="navbar-nav ml-auto topnav">
-                                  <li class="nav-item active">
-                                      <a class="nav-link" href="~/Home/Index">Home <span class="sr-only">(current)</span></a>
-                                  </li>
-                                  <li class="nav-item">
-                                      <a class="nav-link" href="~/Home/About">About</a>
-                                  </li>
-                                  <li class="nav-item dropdown">
-                                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                          Blog
-                                      </a>
-                                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                          <a class="dropdown-item" href="~/Blog/Category">Relationship & Marriage</a>
-                                          <a class="dropdown-item" href="~/Blog/Category">Sports</a>
-                                          @*<div class="dropdown-divider"></div>*@
-                                          <a class="dropdown-item" href="~/Blog/Category">Politics</a>
-                                          <a class="dropdown-item" href="~/Blog/Category">Career</a>
-                                      </div>
-                                  </li>
-                                  <li class="nav-item dropdown">
-                                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                          Support/Counselling
-                                      </a>
-                                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                          <a class="dropdown-item" href="~/Support/Index">Our Support Links</a>
-                                          <a class="dropdown-item" href="~/Support/Send_Message">Send Message</a>
-                                      </div>
-                                  </li>
-                                  <li class="nav-item">
-                                      <a class="nav-link" href="#">Books</a>
-                                  </li>
-                                  <li class="nav-item">
-                                      <a class="nav-link" href="~/Home/Contact">Contact</a>
-                                  </li>
-                              </ul>
-                        </div>
-                            
-
-                    </nav>
-
-                </header>
-             
-
-            }
 
 
-            @RenderBody()
-
-            @if (ViewData["Add Navigation"] != "false")
-            {
-                <!-- Footer -->
-
-                <footer>
-
-
-
-                    <div class="container pt-5 border-bottom">
-                        <div class="row">
-                            <div class="col-md-3 col-sm-6  col-6 mb-3 text-center" style="color:white">
-                               SELAH LOGO
-                            </div>
-                           
-
-                               
-
-                                <div class="col-md-3 col-sm-6 col-6 p-0 mb-3 float-left text-center">
-                                    <h4 class="mb-4 font-weight-bold text-uppercase">Blog</h4>
-                                    <ul class="list-group">
-                                        <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Blog/Category">Relationship & Marriage</a></li>
-                                        <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Blog/Category">Career</a></li>
-                                        <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Blog/Category">Sports</a></li>
-                                        <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Blog/Categoryc">Politics</a></li>
-                                    </ul>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="#">SELAH</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ml-auto topnav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="~/Home/Index">Home <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="~/Home/About">About</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Blog
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="~/Blog/Category">Relationship & Marriage</a>
+                                    <a class="dropdown-item" href="~/Blog/Category">Sports</a>
+                                    @*<div class="dropdown-divider"></div>*@
+                                    <a class="dropdown-item" href="~/Blog/Category">Politics</a>
+                                    <a class="dropdown-item" href="~/Blog/Category">Career</a>
                                 </div>
-
-                                <div class="col-md-3 col-sm-6 col-6 mb-3 p-0 float-left text-center">
-                                    <h4 class="mb-4 font-weight-bold text-uppercase">quick links</h4>
-                                    <ul class="list-group">
-                                        <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Support/Send_Message">Support/Counselling</a></li>
-                                        @*<li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Support/Index">Support Links</a></li>*@
-                                        <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Home/About">About us</a></li>
-                                        <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Home/Contact">Contact us</a></li>
-                                        <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Books/Index">Books</a></li>
-                                    </ul>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Support/Counselling
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="~/Support/Index">Our Support Links</a>
+                                    <a class="dropdown-item" href="~/Support/Send_Message">Send Message</a>
                                 </div>
-
-                                <div class="col-md-3 col-sm-6 col-6 mb-3 p-0 float-left text-center">
-                                    <h4 class="mb-4 font-weight-bold text-uppercase">Connect</h4>
-                                    <ul class="list-group">
-                                    <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="https://www.linkedin.com/company/naologic"><i class="fa fa-linkedin mr-1"></i> LinkedIn</a>
-                                    </li>
-                                    <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="https://twitter.com/naologicerp"><i class="fa fa-twitter mr-1"></i> Twitter</a>
-                                    </li>
-                                    <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="https://github.com/naologic" target="_blank"><i class="fa fa-instagram mr-1"></i> Instagram</a>
-                                    </li>
-
-                                    <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="https://www.facebook.com/naologic/" target="_blank"><i class="fa fa-facebook mr-1"></i> Facebook</a>
-                                    </li>
-
-                                    </ul>
-                                </div>
-
-                            </div>
-                     
-                        @*<div class="col-md-12">
-                                <div class="py-4 d-flex justify-content-center align-items-center">
-                                    <p style="color:white">Copyright &copy; <script>document.write(new Date().getFullYear());</script></p>
-                                </div>
-                        </div>*@
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Books</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="~/Home/Contact">Contact</a>
+                            </li>
+                        </ul>
                     </div>
-               
 
-                </footer>
-               
-            }
-        </div>
+
+                </nav>
+
+            </header>
+
+
+        }
+
+        @RenderBody()
+
+        @if (ViewData["Add Navigation"] != "false")
+        {
+            <!-- Footer -->
+
+            <footer>
+
+
+
+                <div class="container pt-5 border-bottom">
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6  col-6 mb-3 text-center" style="color:white">
+                            SELAH LOGO
+                        </div>
+
+
+
+
+                        <div class="col-md-3 col-sm-6 col-6 p-0 mb-3 float-left text-center">
+                            <h4 class="mb-4 font-weight-bold text-uppercase">Blog</h4>
+                            <ul class="list-group">
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Blog/Category">Relationship & Marriage</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Blog/Category">Career</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Blog/Category">Sports</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Blog/Categoryc">Politics</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="col-md-3 col-sm-6 col-6 mb-3 p-0 float-left text-center">
+                            <h4 class="mb-4 font-weight-bold text-uppercase">quick links</h4>
+                            <ul class="list-group">
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Support/Send_Message">Support/Counselling</a></li>
+                                @*<li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Support/Index">Support Links</a></li>*@
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Home/About">About us</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Home/Contact">Contact us</a></li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2"><a href="~Books/Index">Books</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="col-md-3 col-sm-6 col-6 mb-3 p-0 float-left text-center">
+                            <h4 class="mb-4 font-weight-bold text-uppercase">Connect</h4>
+                            <ul class="list-group">
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2">
+                                    <a href="https://www.linkedin.com/company/naologic"><i class="fa fa-linkedin mr-1"></i> LinkedIn</a>
+                                </li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2">
+                                    <a href="https://twitter.com/naologicerp"><i class="fa fa-twitter mr-1"></i> Twitter</a>
+                                </li>
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2">
+                                    <a href="https://github.com/naologic" target="_blank"><i class="fa fa-instagram mr-1"></i> Instagram</a>
+                                </li>
+
+                                <li class="list-group-item bg-transparent border-0 p-0 mb-2">
+                                    <a href="https://www.facebook.com/naologic/" target="_blank"><i class="fa fa-facebook mr-1"></i> Facebook</a>
+                                </li>
+
+                            </ul>
+                        </div>
+
+                    </div>
+
+                    @*<div class="col-md-12">
+                            <div class="py-4 d-flex justify-content-center align-items-center">
+                                <p style="color:white">Copyright &copy; <script>document.write(new Date().getFullYear());</script></p>
+                            </div>
+                    </div>*@
+                </div>
+
+
+            </footer>
+
+        }
+    </div>
         <environment include="Development">
             <script src="~/NewFolder2/js/jquery-3.2.1.min.js"></script>
             <script src="~/NewFolder2/styles/bootstrap4/popper.js"></script>
