--- a/SelahSeries/Views/Home/Index.cshtml
+++ b/SelahSeries/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
     var category = ViewData["Category"];
     var latestArticle = Model.LatestArticle.OrderByDescending(x => x.CreatedAt);
-   
+
 
 }
 
@@ -81,7 +81,7 @@
 
 <div class=" = 'container containe">
     <div class="row" style="height:150px">
-        <div class=" col-sm-12  col-12 text-center" >
+        <div class=" col-sm-12  col-12 text-center">
             <h1 style="color:black">LOGO</h1>
         </div>
     </div>
@@ -138,7 +138,8 @@
     </div>
 </div>
 
-
+@{ViewData["Search"] = "all";}
+@await Html.PartialAsync("SearchPartial")
 
 
 <div id="blog">
@@ -199,24 +200,24 @@
                         <div class="section_content">
                             <div class="grid clearfix">
                                 @{
-                                    
-                                            foreach (var item in latestArticle)
-                                            {
-                                                
-                                                    <div class="card card_small_with_image grid-item">
-                                                        <img class="card-img-top" src='~/Uploads/@Html.DisplayFor(modelItem => item.TitleImageUrl)' alt="https://unsplash.com/">
-                                                        <div class="card-body">
-                                                            <div class="card-title card-title-small"><a href="~/blog/post/@Html.DisplayFor(modelItem => item.PostId)">@Html.DisplayFor(modelItem => item.Title)</a></div>
-                                                            <small class="post_meta"><a href="#">@Html.DisplayFor(modelItem => item.Author)</a><span>@Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
-                                                        </div>
-                                                    </div>
-                                                
 
-                                            }
-                                         
+                                    foreach (var item in latestArticle)
+                                    {
+
+                                        <div class="card card_small_with_image grid-item">
+                                            <img class="card-img-top" src='~/Uploads/@Html.DisplayFor(modelItem => item.TitleImageUrl)' alt="https://unsplash.com/">
+                                            <div class="card-body">
+                                                <div class="card-title card-title-small"><a href="~/blog/post/@Html.DisplayFor(modelItem => item.PostId)">@Html.DisplayFor(modelItem => item.Title)</a></div>
+                                                <small class="post_meta"><a href="#">@Html.DisplayFor(modelItem => item.Author)</a><span>@Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
+                                            </div>
+                                        </div>
+
 
                                     }
-                                
+
+
+                                }
+
 
 
                                 <!-- Small Card With Image -->
@@ -302,10 +303,10 @@
 
                         <div class="section_content">
                             <div class="grid clearfix">
-                                
 
-                            @foreach (var item in Model.DontMiss)
-                                        {
+
+                                @foreach (var item in Model.DontMiss)
+                                {
 
 
                                     <!-- Small Card With Image -->
@@ -318,9 +319,9 @@
                                     </div>
 
 
-                            }
+                                }
 
-                                       
+
 
 
                                 <!-- Small Card Without Image -->
@@ -367,11 +368,11 @@
                     </div>
 
                 </div>
-                
+
 
                 @*<div class="load_more">
-                    <div id="load_more" class="load_more_button text-center trans_200"><a href="~/blog/category">View More</a></div>
-                </div>*@
+                        <div id="load_more" class="load_more_button text-center trans_200"><a href="~/blog/category">View More</a></div>
+                    </div>*@
 
             </div>
 
@@ -407,6 +408,22 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 											</svg>
                                     </div>
                                     <ul id="custom_dots" class="custom_dots custom_dots_vid">
@@ -418,6 +435,22 @@
                                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                              width="7px" height="12px" viewBox="0 0 7 12" enable-background="new 0 0 7 12" xml:space="preserve">
                                         <polyline fill="#bebebe" points="6.998,6.39 1.389,12 -0.002,12 -0.002,10.562 4.561,6 -0.002,1.438 -0.002,0 1.389,0 7,5.61 " />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -881,9 +914,7 @@
         color: white;
         padding: 40px;
         opacity: 0.8;
-
         font-size: 40px
-
     }
 
     .containe {
@@ -903,34 +934,35 @@
     }
 
     div.carousel-caption {
-
         text-align: center;
         width: 75%;
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 20px;
-        
     }
+
     .mb-4 {
         color: #f2ba16;
         font-size: 0.6em;
         letter-spacing: 0.03em;
         font-family: 'Work Sans', sans-serif;
     }
+
     .page-link:hover {
         z-index: 2;
         color: #fff;
         background-color: #ad001c;
         border-color: #ad001c;
-        cursor:pointer;
+        cursor: pointer;
     }
+
     .pagination .active {
         z-index: 2;
         color: #fff;
         background-color: #ad001c;
         border-color: #ad001c;
-        
     }
+
     .section_panel_more > ul > li {
         display: none;
     }
