--- a/SelahSeries/Views/Shared/SearchPartial.cshtml
+++ b/SelahSeries/Views/Shared/SearchPartial.cshtml
@@ -2,8 +2,7 @@
 @*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
-<div>
-    <div class="body">
+
         <div class="wrapper">
 
             @if (ViewData["Search"].ToString() == "posts")
@@ -29,12 +28,11 @@
             }
 
         </div>
-    </div>
-</div>
+    
 
 
 <style>
-    .body {
+    .wrapper {
         width: 100%;
         height: 250px;
         box-sizing: border-box;
