--- a/SelahSeries/Views/Home/Index.cshtml
+++ b/SelahSeries/Views/Home/Index.cshtml
@@ -24,6 +24,7 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
 
@@ -85,8 +86,8 @@
             <h1 style="color:black">LOGO</h1>
         </div>
     </div>
-    <div class="row">
-        <div class=" col-sm-12 col-md-6 col-lg-3">
+    @*<div class="row">
+        <div class="col-sm-6 col-md-6 col-lg-3">
             <div class="card2">
 
                 <img src="/NewFolder2/new/brigitte-tohm-XyGeWTj2E7w-unsplash.jpg" alt="Avatar">
@@ -98,7 +99,7 @@
 
         </div>
 
-        <div class=" col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-6 col-md-6 col-lg-3">
             <div class="card2">
                 <img src="/NewFolder2/new/kakudmi-JO19K0HDDXI-unsplash (1).jpg" alt="Avatar">
                 <div class="container2">
@@ -110,7 +111,7 @@
         </div>
 
 
-        <div class=" col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-6 col-md-6 col-lg-3">
             <div class="card2">
 
                 <img src="/NewFolder2/new/jacalyn-beales-geRpPjIiu8U-unsplash.jpg" alt="Avatar ">
@@ -124,7 +125,7 @@
 
 
 
-        <div class=" col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-6 col-md-6 col-lg-3">
             <div class="card2">
                 <img src="/NewFolder2/new/lucia-48UaeIMNAA4-unsplash (2).jpg" alt="Avatar">
                 <div class="container2">
@@ -135,7 +136,7 @@
 
         </div>
 
-    </div>
+    </div>*@
 </div>
 
 @{ViewData["Search"] = "all";}
@@ -199,66 +200,63 @@
                         </div>
                         <div class="section_content">
                             <div class="grid clearfix">
-                                @{
-
-                                    foreach (var item in latestArticle)
-                                    {
-
-                                        <div class="card card_small_with_image grid-item">
-                                            <img class="card-img-top" src='~/Uploads/@Html.DisplayFor(modelItem => item.TitleImageUrl)' alt="https://unsplash.com/">
-                                            <div class="card-body">
-                                                <div class="card-title card-title-small"><a href="~/blog/post/@Html.DisplayFor(modelItem => item.PostId)">@Html.DisplayFor(modelItem => item.Title)</a></div>
-                                                <small class="post_meta"><a href="#">@Html.DisplayFor(modelItem => item.Author)</a><span>@Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
-                                            </div>
-                                        </div>
 
 
-                                    }
+                                @foreach (var item in latestArticle)
+        {
+
+            <div class="card card_default card_small_with_image grid-item">
+                <img class="card-img-top" src='~/Uploads/@Html.DisplayFor(modelItem => item.TitleImageUrl)' alt="https://unsplash.com/">
+                <div class="card-body">
+                    <div class="card-title card-title-small"><a href="~/blog/post/@Html.DisplayFor(modelItem => item.PostId)">@Html.DisplayFor(modelItem => item.Title)</a></div>
+                    <small class="post_meta"><a href="#">@Html.DisplayFor(modelItem => item.Author)</a><span>@Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
+                </div>
+            </div>
 
 
-                                }
-
-
-
-                                <!-- Small Card With Image -->
-                                <div class="card card_small_with_image grid-item">
-                                    <img class="card-img-top" src="/NewFolder2/images/post_10.jpg" alt="">
-                                    <div class="card-body">
-                                        <div class="card-title card-title-small"><a href="~/blog/post">Html.DisplayFor(modelItem => item.Title)</a></div>
-                                        <small class="post_meta"><a href="#">Html.DisplayFor(modelItem => item.Author)</a><span>Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
-                                    </div>
-                                </div>
-
-                                <!-- Small Card With Image -->
-                                <div class="card card_small_with_image grid-item">
-                                    <img class="card-img-top" src="/NewFolder2/images/post_15.jpg" alt="">
-                                    <div class="card-body">
-                                        <div class="card-title card-title-small"><a href="~/blog/post">Html.DisplayFor(modelItem => item.Title)</a></div>
-                                        <small class="post_meta"><a href="#">Html.DisplayFor(modelItem => item.Author)</a><span>Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
-                                    </div>
-                                </div>
+        }
 
 
 
 
-                                <!-- Small Card With Image -->
-                                <div class="card card_small_with_image grid-item">
-                                    <img class="card-img-top" src="/NewFolder2/images/post_15.jpg" alt="">
-                                    <div class="card-body">
-                                        <div class="card-title card-title-small"><a href="~/blog/post">Html.DisplayFor(modelItem => item.Title)</a></div>
-                                        <small class="post_meta"><a href="#">Html.DisplayFor(modelItem => item.Author)</a><span>Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
-                                    </div>
-                                </div>
 
 
-                                <!-- Small Card With Background -->
-                                <div class="card card_default card_small_with_background grid-item">
-                                    <div class="card_background" style="background-image:url(/NewFolder2/images/post_11.jpg)"></div>
-                                    <div class="card-body">
-                                        <div class="card-title card-title-small"><a href="~/blog/post">Title</a></div>
-                                        <small class="post_meta"><a href="#">Html.DisplayFor(modelItem => item.Author)</a><span>Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
-                                    </div>
-                                </div>
+
+                                <!-- Small Card Without Image -->
+                                @*@<div class="card card_default card_small_no_image grid-item">
+            <div class="card-body">
+                <div class="card-title card-title-small"><a href="~/blog/post">How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</a></div>
+                <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span></small>
+            </div>
+        </div>
+
+        *<!-- Small Card With Background -->
+        <div class="card card_default card_small_with_background grid-item">
+            <div class="card_background" style="background-image:url(/NewFolder2/images/post_4.jpg)"></div>
+            <div class="card-body">
+                <div class="card-title card-title-small"><a href="~/blog/post">How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</a></div>
+                <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span></small>
+            </div>
+        </div>
+
+        <!-- Small Card With Image -->
+        <div class="card card_small_with_image grid-item">
+            <img class="card-img-top" src="/NewFolder2/images/post_2.jpg" alt="https://unsplash.com/">
+            <div class="card-body">
+                <div class="card-title card-title-small"><a href="~/blog/post">How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</a></div>
+                <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span></small>
+            </div>
+        </div>
+
+        <!-- Small Card With Image -->
+        <div class="card card_small_with_image grid-item">
+            <img class="card-img-top" src="/NewFolder2/images/post_3.jpg" alt="https://unsplash.com/">
+            <div class="card-body">
+                <div class="card-title card-title-small"><a href="~/blog/post">How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</a></div>
+                <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span></small>
+            </div>
+        </div>*@
+
 
 
 
@@ -276,11 +274,18 @@
                                         <span class="sr-only">Previous</span>
                                     </a>
                                 </li>
-                                <li class="page-item btnn0 active"><a href="~/2?@category=all#blog" class="page-link waves-effect waves-effect">1</a></li>
+                                @{
+                                    var numberOfPages = (int)Math.Ceiling((Decimal)Model.LatestArticle.Count() / Model.TotalPostCount);
+                                    foreach (var item in Enumerable.Range(1, numberOfPages))
+                                    {
+                                        <li class="page-item btnn0 active "><a href="~/@item?@category=all#blog" class="page-link waves-effect waves-effect">@item</a></li>
+                                    }
+                                }
+                                @*<li class="page-item btnn0 active"><a href="~/2?@category=all#blog" class="page-link waves-effect waves-effect">1</a></li>
                                 <li class="page-item btnn0"><a href="~/2?category=@category#blog" class="page-link waves-effect waves-effect">2</a></li>
                                 <li class="page-item btnn0"><a href="~/3?category=@category#blog" class="page-link waves-effect waves-effect">3</a></li>
                                 <li class="page-item btnn0"><a href="~/4?category=@category#blog" class="page-link waves-effect waves-effect">4</a></li>
-                                <li class="page-item btnn0"><a href="~/5?category=@category#blog" class="page-link waves-effect waves-effect">5</a></li>
+                                <li class="page-item btnn0"><a href="~/5?category=@category#blog" class="page-link waves-effect waves-effect">5</a></li>*@
                                 <li class="page-item btnn0">
                                     <a class="page-link waves-effect waves-effect" aria-label="Next">
                                         <span aria-hidden="true">»</span>
@@ -310,7 +315,7 @@
 
 
                                     <!-- Small Card With Image -->
-                                    <div class="card card_small_with_image grid-item">
+                                    <div class="card card_default  card_small_with_image grid-item">
                                         <img class="card-img-top" src='~/Uploads/@Html.DisplayFor(modelItem => item.TitleImageUrl)' alt="https://unsplash.com/">
                                         <div class="card-body">
                                             <div class="card-title card-title-small"><a href="~/blog/post/@Html.DisplayFor(modelItem => item.PostId)">@Html.DisplayFor(modelItem => item.Title)</a></div>
@@ -324,7 +329,7 @@
 
 
 
-                                <!-- Small Card Without Image -->
+                                @*<!-- Small Card Without Image -->
                                 <div class="card card_default card_small_no_image grid-item">
                                     <div class="card-body">
                                         <div class="card-title card-title-small"><a href="~/blog/post">How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</a></div>
@@ -357,7 +362,7 @@
                                         <div class="card-title card-title-small"><a href="~/blog/post">How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</a></div>
                                         <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span></small>
                                     </div>
-                                </div>
+                                </div>*@
 
 
 
