--- a/SelahSeries/Views/Shared/_Layout.cshtml
+++ b/SelahSeries/Views/Shared/_Layout.cshtml
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Demo project">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    @if (IsSectionDefined("AddMetaTags"))
+    {
+        @RenderSection("AddMetaTags", required: false)
+    }
 
     <environment include="Development">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700,900|Oswald:400,700">
@@ -21,9 +25,9 @@
             @RenderSection("AddToHead", required: false)
         }
 
-         <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/aos.css">
+        <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/aos.css">
         <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/style.css">
-        
+
 
     </environment>
     <environment exclude="Development">
@@ -46,7 +50,7 @@
 
 
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="#"><img style="height:42px"src="~/NewFolder2/new/selah hdr md.png" /></a>
+                    <a class="navbar-brand" href="/"><img style="height:42px"src="~/NewFolder2/new/selah hdr md.png" /></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
