added more styles

--- a/SelahSeries/Views/Home/About.cshtml
+++ b/SelahSeries/Views/Home/About.cshtml
@@ -142,7 +142,7 @@
                     <div class="col-lg-8">
                         <div id="myCarousel" class="carousel slide">
                             <p class="indent" style="text-align:justify; color: black; line-height: 1.7">
-                                My name is Titilayo LEKAN-AGUNBIADE. I was born into a middle level monogamous
+                                My name is <b>Titilayo LEKAN-AGUNBIADE</b>. I was born into a middle level monogamous
                                 family of six in Nigeria. I had my primary school education in St. Mary Catholic Primary
                                 School, Ile-Ife and my secondary school education at Adepetu Comprehensive College, Ile-Ife
                                 from where I proceeded to Ladoke Akintola University of Technology, Ogbomosho for my
@@ -427,10 +427,10 @@
         padding-bottom: 30px;
     }
     .eurekaa {
-        border-left: 15px solid crimson;
+        border-left: 15px solid #ec517f;
         margin: 0 50px 0 50px;
-        border-right: 15px solid crimson;
-        border-top: 15px solid crimson;
+        border-right: 15px solid #ec517f;
+        border-top: 15px solid #ec517f;
     }
     .same {
         border-left: 15px solid #0071bd;
