--- a/SelahSeries/Views/Home/Index.cshtml
+++ b/SelahSeries/Views/Home/Index.cshtml
@@ -80,9 +80,9 @@
 </div>
 
 <div class=" = 'container containe">
-    <div class="row" style="height:150px">
+    <div class="row" style="height:150px; margin-bottom:40px">
         <div class=" col-sm-12  col-12 text-center" >
-            <h1 style="color:black">LOGO</h1>
+            <img style="height:150px" src="~/NewFolder2/new/middl selah.png" alt="image"/>
         </div>
     </div>
     <div class="row">
@@ -888,7 +888,7 @@
 
     .containe {
         background-color: #F2F2F2;
-        padding: 62px;
+        padding: 50px 62px;
     }
 
     .books .carousel-inner {
