--- a/SelahSeries/Views/Shared/_Layout.cshtml
+++ b/SelahSeries/Views/Shared/_Layout.cshtml
@@ -356,7 +356,7 @@
         font-family: "Ubuntu", "Work-sans", sans-serif;
         background: #012035;
     }
-    .d-inline{
+    li:not(:last-child).d-inline {
         margin-right: 18px;
     }
 </style>
