--- a/SelahSeries/Views/Support/Index.cshtml
+++ b/SelahSeries/Views/Support/Index.cshtml
@@ -68,6 +68,33 @@
                             <div class="frontside">
                                 <div class="card">
                                     <div class="card-body text-center">
+                                        <p><img class=" img-fluid" src="~/NewFolder2/ministers/Faleye.jpg" alt="card image"></p>
+                                        <h4 class="card-title">Prophet Iyiola Folorunsho Faleye</h4>
+                                        <p class="card-text">Retired nurse, Pastor, intercessor and counselor. </p>
+                                        <a href="#" class="btn btn-sm button"><i class="fa fa-plus"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="backside">
+                                <div class="card">
+                                    <div class="card-body text-center mt-4">
+                                        <h4 class="card-title">Prophet Iyiola Folorunsho Faleye</h4>
+                                        <p class="card-text line-clamp">Prophet Iyiola Folorunso FALEYE is the founder and President of Living Word Evangelical and Prophetic Prayer Ministry (a.k.a Asoromaye Prayer City) Ile -Ife, Osun State, Nigeria. Following a divine encounter with the Lord in the year 1997, he was commissioned into evangelism and prayer ministry.</p>
+                                        <p><a href="~/Support/Bio/3" class="read_more_btn">Read More</a></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- ./Team member -->
+                <!-- Team member -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+                        <div class="mainflip">
+                            <div class="frontside">
+                                <div class="card">
+                                    <div class="card-body text-center">
                                         <p><img class=" img-fluid" src="~/NewFolder2/ministers/ganiyu.jpg" alt="card image"></p>
                                         <h4 class="card-title">Oluwatofunmi Kehinde Ganiyu</h4>
                                         <p class="card-text">Teacher and relationship enthusiast.</p>
@@ -83,33 +110,6 @@
                                             Oluwatofunmi Kehinde GANIYU is a marriage and relationship enthusiast who desires that all youths find their life’s purposes and have fulfilling marital lives. She is passionate about the things of God and impacting the younger generation with values appropriate to sustain them for God in this pervert world. She gave her life to Jesus in 2008 and has since been an asset in God’s hands.
                                         </p>
                                         <p><a href="~/Support/Bio/2" class="read_more_btn">Read More</a></p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- ./Team member -->
-                <!-- Team member -->
-                <div class="col-xs-12 col-sm-6 col-md-4">
-                    <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
-                        <div class="mainflip">
-                            <div class="frontside">
-                                <div class="card">
-                                    <div class="card-body text-center">
-                                        <p><img class=" img-fluid" src="~/NewFolder2/ministers/Faleye.jpg" alt="card image"></p>
-                                        <h4 class="card-title">Prophet Iyiola Folorunsho Faleye</h4>
-                                        <p class="card-text">Retired nurse, Pastor, intercessor and counselor. </p>
-                                        <a href="#" class="btn btn-sm button"><i class="fa fa-plus"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="backside">
-                                <div class="card">
-                                    <div class="card-body text-center mt-4">
-                                        <h4 class="card-title">Prophet Iyiola Folorunsho Faleye</h4>
-                                        <p class="card-text line-clamp">Prophet Iyiola Folorunso FALEYE is the founder and President of Living Word Evangelical and Prophetic Prayer Ministry (a.k.a Asoromaye Prayer City) Ile -Ife, Osun State, Nigeria. Following a divine encounter with the Lord in the year 1997, he was commissioned into evangelism and prayer ministry.</p>
-                                        <p><a href="~/Support/Bio/3" class="read_more_btn">Read More</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -151,9 +151,9 @@
                             <div class="frontside">
                                 <div class="card">
                                     <div class="card-body text-center">
-                                        <p><img class=" img-fluid" src="~/NewFolder2/ministers/Adewoyin.jpg" alt="card image"></p>
-                                        <h4 class="card-title">Oyenike Adewoyin</h4>
-                                        <p class="card-text">Nurse, marriage counselor and sexuality coach</p>
+                                        <p><img class=" img-fluid" src="~/NewFolder2/ministers/Orioke.jpg" alt="card image"></p>
+                                        <h4 class="card-title">Pastor(Dr.) Samuel Odunlami Orioke</h4>
+                                        <p class="card-text">Retired medical doctor, Pastor, marriage counselor and life coach. </p>
                                         <a href="#" class="btn btn-sm button"><i class="fa fa-plus"></i></a>
                                     </div>
                                 </div>
@@ -161,9 +161,9 @@
                             <div class="backside">
                                 <div class="card">
                                     <div class="card-body text-center mt-4">
-                                        <h4 class="card-title">Oyenike Adewoyin</h4>
-                                        <p class="card-text line-clamp">Oyenike ADEWOYIN is a daughter of the Most High God. She is a nurse by profession, a teacher who practically impacts the Word with simplicity; and a seasoned counselor through the instrumentality of the Holy Spirit.</p>
-                                        <p><a href="~/Support/Bio/5" class="read_more_btn">Read More</a></p>
+                                        <h4 class="card-title"> Pastor(Dr.) Samuel Odunlami Orioke</h4>
+                                        <p class="card-text line-clamp">Pastor (Dr.) Samuel Odunlami ORIOKE is the General Overseer of Christ Way Ministry International, headquartered in Ile-Ife, Nigeria. Besides being an elder statesman in the society, Dr. Odun Orioke is also a mentor to many Christian ministries, fellowships and families across many divides. He is a veteran counselor with limitless passion for working marriages, and a peaceable conflict mediator.</p>
+                                        <p><a href="~/Support/Bio/6" class="read_more_btn">Read More</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -178,9 +178,9 @@
                             <div class="frontside">
                                 <div class="card">
                                     <div class="card-body text-center">
-                                        <p><img class=" img-fluid" src="~/NewFolder2/ministers/Orioke.jpg" alt="card image"></p>
-                                        <h4 class="card-title">Pastor(Dr.) Samuel Odunlami Orioke</h4>
-                                        <p class="card-text">Retired medical doctor, Pastor, marriage counselor and life coach. </p>
+                                        <p><img class=" img-fluid" src="~/NewFolder2/ministers/Adewoyin.jpg" alt="card image"></p>
+                                        <h4 class="card-title">Oyenike Adewoyin</h4>
+                                        <p class="card-text">Nurse, marriage counselor and sexuality coach</p>
                                         <a href="#" class="btn btn-sm button"><i class="fa fa-plus"></i></a>
                                     </div>
                                 </div>
@@ -188,9 +188,9 @@
                             <div class="backside">
                                 <div class="card">
                                     <div class="card-body text-center mt-4">
-                                        <h4 class="card-title"> Pastor(Dr.) Samuel Odunlami Orioke</h4>
-                                        <p class="card-text line-clamp">Pastor (Dr.) Samuel Odunlami ORIOKE is the General Overseer of Christ Way Ministry International, headquartered in Ile-Ife, Nigeria. Besides being an elder statesman in the society, Dr. Odun Orioke is also a mentor to many Christian ministries, fellowships and families across many divides. He is a veteran counselor with limitless passion for working marriages, and a peaceable conflict mediator.</p>
-                                        <p><a href="~/Support/Bio/6" class="read_more_btn">Read More</a></p>
+                                        <h4 class="card-title">Oyenike Adewoyin</h4>
+                                        <p class="card-text line-clamp">Oyenike ADEWOYIN is a daughter of the Most High God. She is a nurse by profession, a teacher who practically impacts the Word with simplicity; and a seasoned counselor through the instrumentality of the Holy Spirit.</p>
+                                        <p><a href="~/Support/Bio/5" class="read_more_btn">Read More</a></p>
                                     </div>
                                 </div>
                             </div>
@@ -279,7 +279,7 @@
     }
   
     .site {
-        padding: 43px 25px 40px 25px;
+        padding: 0px 25px 40px 25px;
         background-size: cover;
         background-repeat: repeat;
         background-position: center;
@@ -301,11 +301,11 @@
         padding-left: 26px;
         padding-right: 26px;
     }
-    .card-body{
+    /*.card-body{
         padding: 0px;
         padding-top: 0px;
         padding-left: 0px;
-    }
+    }*/
     .backside .card-body {
         margin: 18px 20px 0px 20px;
     }
