--- a/SelahSeries/wwwroot/NewFolder2/ministers/style.css
+++ b/SelahSeries/wwwroot/NewFolder2/ministers/style.css
@@ -146,9 +146,9 @@ section {
         }
 
         .frontside .card .card-body img {
-            width: 100%;
-            height: 256px;
-            border-radius: 0px;
+            width: 90%;
+            height: 197px;
+            border-radius: 50%;
         }
 .support_head {
     text-transform: capitalize;
