--- a/SelahSeries/Views/Home/Contact.cshtml
+++ b/SelahSeries/Views/Home/Contact.cshtml
@@ -6,6 +6,7 @@
 @section AddToHead {
     <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/contact.css">
     <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/contact_responsive.css">
+    <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/responsive.css">
 }
 
 @section AddToEnd {
@@ -13,31 +14,31 @@
 }
 
 
-    <div class="home">
-        <div class="home_background parallax-window site-blocks-cover overlay" data-parallax="scroll" style="background-image:url(/NewFolder2/new/priscilla-du-preez-glDterhfzKw-unsplash.jpg)" data-speed="0.8"></div>
-        
-        <div class="home_content">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 offset-lg-3">
-                        <!-- Post Comment -->
-                        <div class="post_comment">
-                            <div class="contact_form_container" style="margin-bottom:40px">
-                                @using (Html.BeginForm())
-                                {
-                                    @Html.AntiForgeryToken()
-                                    <input type="text" name="name" class="contact_input contact_input_name" placeholder="Your FullName" required="required">
-                                    <input type="email" name="email" class="contact_input contact_input_email" placeholder="Your Email" required="required">
-                                    <input type="text" name="Subject" class="contact_input" style="width:100%; margin-top:15px" placeholder="Mesage Subject" required="required">
-                                    <textarea class="contact_text" name="message" placeholder="Your Message" required="required"></textarea>
-                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                    <button type="submit" class="contact_button">Send Message</button>
-                                }
-                            </div>
+<div class="home">
+    <div class="home_background parallax-window site-blocks-cover overlay" data-parallax="scroll" style="background-image:url(/NewFolder2/new/priscilla-du-preez-glDterhfzKw-unsplash.jpg)" data-speed="0.8"></div>
+
+    <div class="home_content">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 offset-lg-3">
+                    <!-- Post Comment -->
+                    <div class="post_comment">
+                        <div class="contact_form_container" style="margin-bottom:40px">
+                            @using (Html.BeginForm())
+                            {
+                                @Html.AntiForgeryToken()
+                                <input type="text" name="name" class="contact_input contact_input_name" placeholder="Your FullName" required="required">
+                                <input type="email" name="email" class="contact_input contact_input_email" placeholder="Your Email" required="required">
+                                <input type="text" name="Subject" class="contact_input" style="width:100%; margin-top:15px" placeholder="Mesage Subject" required="required">
+                                <textarea class="contact_text" name="message" placeholder="Your Message" required="required"></textarea>
+                                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                <button type="submit" class="contact_button">Send Message</button>
+                            }
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
